Fix Bundle page title too high problem

--- a/src/app/in-app-purchase/in-app-purchase.component.scss
+++ b/src/app/in-app-purchase/in-app-purchase.component.scss
@@ -2,6 +2,7 @@
   font-size: 20px;
   font-weight: 600;
   padding: 0.5rem;
+  margin-top: 1rem;
 }
 
 .free-container {
